Fixed li being cut off at top of browser.

--- a/C6/Intro-CSS/forms/stylesheet.css
+++ b/C6/Intro-CSS/forms/stylesheet.css
@@ -24,7 +24,7 @@ html, body{
     min-height: 95vh;
     max-height: 300vh;/*Allow overflow without scrollbar*/
     height: auto;
-    /*Weird GitHub Error not allowing linking for below image.*/
+    /*Weird GitHub Error not allowing linking for below image.  Using Imgur*/
     background-image: url('http://i.imgur.com/Uyn66sJ.jpg');
     color: #ed94bd;
     border: 8px solid #ed94bd;
@@ -78,6 +78,8 @@ html, body{
     margin-right: .5vh;
     margin-left: .5vh;
     font-size: 4.0vh;
+    position: relative;
+    top: 1.2vh;
 }
 
 #navbar a {
